fix(ui): updates `_table.scss` to fix "send empty" checkbox alignment

--- a/src/style/_table.scss
+++ b/src/style/_table.scss
@@ -169,6 +169,7 @@ table
 
     input {
         margin-right: 7px;
+        width: auto;
     }
 
     &.disabled {
